updating projects header

--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -1,7 +1,10 @@
+* {
+  background-color: black;
+}
 header {
-  font-family: verdana,
-  font-weight: normal,
-  font-size: 50px,
-  color: white,
-  text-align: center,
+  font-family: verdana;
+  font-weight: normal;
+  font-size: 50px;
+  color: white;
+  text-align: center;
 }
