--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -1,49 +1,122 @@
-* {
+
+  body {
+  font-family: Helvetica;
+  font-size: 22px;
+  color: seashell;
   background-color: black;
+  opacity: 0.9;
+  font-size: 22px;
   text-align: center;
+  
+
+  }
+
+  header {
+  height: 69px;
+  background-color: black;
+  display: flex;
+  justify-content: space-between;
+  width: 100%;
+  position: fixed;
+  border-bottom: 1px solid seashell;
+  padding-right: 20px;
+  margin-top: -10px;
+
+ 
 }
-header {
-  font-family: verdana;
+
+.header-left {
+  padding-left: 10px;
+  align-items: center;
+  display: inline-flex;
+  opacity: 0.8;
 
 }
-header h1 {
-  font-weight: normal;
-  font-size: 50px;
-  color: white;
-  text-align: center;
-}
 
-.link {
-  color:aquamarine;
-  font-size: 16px;
+.header-right {
+ 
+padding-right: 20px;
+display: inline-flex;
+
+}
+ul {
   text-decoration: underline;
+  list-style: none;
+  display: inline-flex;
+ 
+  
+}
+.lücke {
+  padding-left: 30px;
+}
+.banner {
+  background-image: url("https://content.codecademy.com/courses/freelance-1/unit-4/img-mission-background.jpg");
+  display: inline-flex;
+  background-repeat: no-repeat;
+  height: 700px;
+  width: 1200px;
+  align-items: center;
+  
+}
+.text {
+  background-color: black;
+  width: 100%;
+}
+#teaofmonth {
+  display: inline-flex;
+  justify-content: center;
+  flex-wrap: wrap;
+  width: 70%;
+ 
+}
+#cart {
+
+  display: flex;
+  flex-direction: column;
+  padding-right: 10px;
+}
+#title {
+  margin-top: -15px;
+}
+#cartpic img{
+  height: 200px;
+  width: 300px;
+}
+#containerlocations {
+  height: 600px;
+  width: 1200px;
+  background-image: url("https://content.codecademy.com/courses/freelance-1/unit-4/img-locations-background.jpg");
+  background-repeat: no-repeat;
+  background-position: 30% 0.1%;
+  margin-top: 50px;
+  display: inline-flex;
+  justify-content: center;
+
+}
+#locations {
+  justify-content: center;
+  margin-top: 40px;
+ }
+#boxes {
+  display: inline-flex;
+}
+.box {
+  width: 300px;
+  height: 300px;
+  background-color: black;
+  opacity: 1;
+  justify-content: center;
+  text-align: center;
+  padding: 30px 10px 10px 10px;
+  margin-right: 20px;
+  margin-right: 20px;
+  
+}
+.impressum {
+  height: 200px;
 }
 
-.video {
-  size: auto;
-}
-
-.explain h1{
-  font-family: verdana;
-  font-size: 42px;
-  font-weight: 300;
-}
-
-.explain p{
-  font-family: verdana;
-  font-size: 21px;
-  color: grey;
-}
-
-img {
-  display: block;
-  margin: auto;
-  margin-bottom: 25px;
-
-}
-.footer p {
-  text-align: right;
-  font-family: verdana;
-  color: gray;
-  font-size: 21px;
+#footer {
+  text-align: left;
+  margin-left: 20px;
 }
